--- a/style.css
+++ b/style.css
@@ -1,113 +1,70 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Microsoft JhengHei', sans-serif;
-}
-.banner{
-    width: 100%;
-    min-height: 100vh;
-    background: url('./images/remi-yuan.jpg') no-repeat ;
-    background-size: cover;
-}
-.menu{
-    position: fixed;/**/
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 0 100px;
-    box-sizing: border-box;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-/*scroll*/
-.black{
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-a{
-    text-decoration: none;
-}
-.logo{
-    position: relative;
-    top:16px;
-    padding:5px;
-    font-size: 28px;
-    font-weight: bold;
-    color: #0b273f;
-}
-/*scroll*/
-.black .logo{
-    color: #fff;
-}
-.menu img{
-    
-    position: relative;
-    top:8px;
-    float: left;
-    margin: 2px;
-}
-nav{
-    position: relative;/**/
-    float: right;
-}
-nav ul{
-    margin: 0;
-    padding: 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: sans-serif;
+    background-color: #e91e63;
 }
-nav ul li{
-    list-style: none;
-
-}
-nav ul li a{
-    display: block;/*撐滿*/
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #0b273f;
-    font-weight: bold;
-    padding: 30px;
-}
-/*scroll*/
-.black nav ul li a{
-    color: #fff; 
-}
-
-
-nav ul li a:hover{
-    background-color: #184771;
-    color: #fff;
-}
-nav ul li ul{
-    display: block;/**/
-    background-color: rgba(255, 255, 255, 0.5);
-    min-width: 250px;
-    position: absolute;
-    margin-top: 1px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-    transition: 0.5s;
-    transform: translateY(40px);
-    opacity: 0;
-    visibility: hidden;
-}
-/*scroll*/
-.black nav ul li ul{
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-nav ul li:hover ul{
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-}
-nav ul li ul li a{
-    padding: 10px;
-}
-
-
-.content{
-    width:80%;
-    margin: 0 auto;
-}
-footer{
+.container{
     width: 100%;
-    height: 80px;
-    background-color: #184771;
+    height: 300px;
+    background-color: #fffc93;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container .box{
+    position: relative;
+    width: 300px;
+    height: 100px;
+    text-align: center;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    color: #795548;
+    overflow: hidden;/**/
+}
+.container .box:last-child{
+    border: none;
+ 
+}
+.container .box .icon{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
+    transition: 0.5s;
+}
+.container .box .icon .fa{
+    padding-right: 10px;
+    transition: 0.5s;
+}
+.container .box:hover .icon{
+    transform: translateY(-100%);
+}
+.container .box:hover .icon .fa{
+    transform: translateY(100px);
+    font-size: 80px;
+    opacity: 0.1;
+    transition-delay: 0.5s;
+    z-index: -1;
+}
+.container .box .details{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-size: 28px;
+    transform: translateY(100%);
+    transition: 0.5s;
+}
+.container .box:hover .details{
+    transform: translateY(0);
 }
